implemented attendance analytics query